--- a/components/Range/Range.module.css
+++ b/components/Range/Range.module.css
@@ -34,15 +34,17 @@
   .container input::-webkit-slider-thumb {
     -webkit-appearance: none;
     appearance: none;
-    width: 1.2rem;
-    height: 1.2rem;
+    width: 1.5rem;
+    height: 1.5rem;
     background: black;
     cursor: pointer;
     border-radius: 100%;
+    border: 2px solid white;
+    
   }
   .container input::-moz-range-thumb {
-    width: 1.2rem;
-    height: 1.2rem;
+    width: 1.5rem;
+    height: 1.5rem;
     background: blue;
     border-radius: 100%;
     cursor: pointer;
@@ -52,36 +54,48 @@
   }
   .container.inputDisable input::-webkit-slider-thumb {
     background: lightgray;
+    box-shadow: 0px 0px 0px 2px lightgray;
   }
   .container.inputDisable input::-moz-range-thumb {
     background: lightgray;
+    box-shadow: 0px 0px 0px 2px lightgray;
   }
   .container.sc1 input::-webkit-slider-thumb {
     background: #bd0000;
+    box-shadow: 0px 0px 0px 2px #bd0000;
   }
   .container.sc1 input::-moz-range-thumb {
     background: #bd0000;
+    box-shadow: 0px 0px 0px 2px #bd0000;
   }
   .container.sc2 input::-webkit-slider-thumb {
     background: red;
+    box-shadow: 0px 0px 0px 2px red;
   }
   .container.sc2 input::-moz-range-thumb {
     background: red;
+    box-shadow: 0px 0px 0px 2px red;
   }
   .container.sc3 input::-webkit-slider-thumb {
     background: darkorange;
+    box-shadow: 0px 0px 0px 2px darkorange;
   }
   .container.sc3 input::-moz-range-thumb {
     background: darkorange;
+    box-shadow: 0px 0px 0px 2px darkorange;
   }
   .container.sc4 input::-webkit-slider-thumb {
     background: limegreen;
+    box-shadow: 0px 0px 0px 2px limegreen;
   }
   .container.sc4 input::-moz-range-thumb {
     background: limegreen;
+    box-shadow: 0px 0px 0px 2px limegreen;
+    
   }
   .container.sc5 input::-webkit-slider-thumb {
     background: #08a908;
+    box-shadow: 0px 0px 0px 2px #08a908;
   }
   .container.sc5 input::-moz-range-thumb {
     background: #08a908;
@@ -93,7 +107,7 @@
     width: 18px;
     height: 18px;
     position: absolute;
-    bottom: 18px;
+    bottom: 22px;
     text-align: center;
     transition: transform 0.2s;
     z-index: 1;
